@@ -1,5 +1,6 @@
 #! /bin/sh
 rm -f test/test21/blood-elf.M1
+rm -f test/test21/blood-elf-footer.M1
 rm -f test/test21/blood-elf.hex2
 rm -f test/test21/proof
 exit 0
