@@ -1,5 +1,6 @@
 #! /bin/sh
 rm -f test/test22/hex2_linker.M1
+rm -f test/test22/hex2_linker-footer.M1
 rm -f test/test22/hex2_linker.hex2
 rm -f test/test22/proof
 exit 0
