@@ -1,1 +1,1 @@
-49eaa0c479d2a327d968e78a56baae36f5f18193062e885232727edadc5b7a2d  test/test22/proof
+a84ac16eef799668eb1fd5c69cbc7cf0c1f053a6d87db43a16f41172ddd375cb  test/test22/proof
