@@ -1,5 +1,6 @@
 #! /bin/sh
 rm -f test/test23/M1-macro.M1
+rm -f test/test23/M1-macro-footer.M1
 rm -f test/test23/M1-macro.hex2
 rm -f test/test23/proof
 exit 0
